<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Free Mobile Netstat</string>
    <string name="stat_connected_to_foreign_mobile_network">Connecté à un réseau étranger</string>
    <string name="stat_connected_to_mobile_network">Connecté au réseau %s</string>
    <string name="stat_airplane_mode_on">Mode avion détecté</string>
    <string name="stat_no_signal">Aucun signal</string>
    <string name="mobile_network_type">Réseau mobile %s</string>
    <string name="network_free_mobile">Free</string>
    <string name="network_orange">Orange</string>
    <string name="network_unknown">inconnu</string>
    <string name="network_type_unknown">inconnu</string>
    <string name="network_type_gprs">2G (GPRS)</string>
    <string name="network_type_edge">2G (EDGE)</string>
    <string name="network_type_umts">3G (UMTS)</string>
    <string name="network_type_hsdpa">3G+ (HSDPA)</string>
    <string name="network_type_hsupa">3G+ (HSUPA)</string>
    <string name="network_type_hspa">3G+ (HSPA)</string>
    <string name="network_type_hspap">3G+ (HSPAP)</string>
    <string name="network_type_cdma">CDMA</string>
    <string name="network_type_lte">4G (LTE)</string>
    <string name="network_free_femtocell">%s - Femtocell</string>
    <string name="service_monitor">Service de suivi de la connexion</string>
    <string name="stat_mobile_network">Réseau actuel</string>
    <string name="stat_mobile_code">MCC+MNC</string>
    <string name="stat_screen">Écran allumé</string>
    <string name="stat_wifi">Wi-Fi actif</string>
    <string name="stat_battery">Batterie</string>
    <string name="stat_on_orange">Sur Orange</string>
    <string name="stat_on_free_mobile">Sur Free</string>
    <string name="stat_on_femtocell">Dont Femtocell</string>
    <string name="days">j</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="seconds">s</string>
    <string name="exporting_data">Export des données en cours…</string>
    <string name="external_storage_not_available">Support externe non disponible</string>
    <string name="export_done">Données exportées avec succès</string>
    <string name="export_error">Impossible d\'exporter les données</string>
    <string name="menu_export">Exporter</string>
    <string name="menu_preferences">Préférences</string>
    <string name="menu_quit">Quitter</string>
    <string name="chart">Camembert</string>
    <string name="pref_background_service">Surveillance du réseau</string>
    <string name="pref_enable_at_boot">Activer au démarrage</string>
    <string name="pref_enable_at_boot_summary">Démarrer automatiquement la surveillance</string>
    <string name="pref_upload_stats">Diffuser les statistiques réseau</string>
    <string name="pref_upload_stats_summary">Sur freemobilenetstat.appspot.com</string>
    <string name="pref_about">À propos</string>
    <string name="pref_version">Version</string>
    <string name="pref_changelog">Nouveautés</string>
    <string name="pref_changelog_summary">Quoi de neuf dans cette version ?</string>
    <string name="pref_license">Licence</string>
    <string name="pref_license_summary">Code source disponible sur github.com/vdavy/freemobilenetstat</string>
    <string name="pref_homesite">Statistiques nationales</string>
    <string name="pref_homesite_summary">Ouvrir la page freemobilenetstat.appspot.com</string>
    <string name="pref_notif_sound">Alarme sonore</string>
    <string name="pref_notif_sound_summary">Avertir lorsque l\'opérateur de réseau change</string>
    <string name="pref_enable_auto_restart_service">Relancement automatique du service</string>
    <string name="pref_enable_auto_restart_service_summary">Si la notification ne s\'actualise plus (Bug KitKat).</string>
    <string name="pref_enable_lollipop_lockscreen_notification">Notification sur l\'écran de verrouillage.</string>
    <string name="pref_enable_lollipop_lockscreen_notification_summary">Active la notification de Lollipop sur l\'écran de verrouillage.</string>
    <string name="pref_time_interval">Afficher les données depuis…</string>
    <string name="pref_notif">Notification</string>
    <string name="pref_notif_action">Action de la notification</string>
    <string name="pref_notif_action_summary_netop">Afficher les opérateurs de réseau</string>
    <string name="pref_notif_action_summary_stats">Afficher les statistiques</string>
    <string name="pref_enable_notif_actions">Afficher les actions de notification</string>
    <string name="pref_enable_notif_actions_summary">Inclure des raccourcis sous la notification</string>
    <string name="pref_theme">Thème</string>
    <string name="theme_color">Couleur</string>
    <string name="theme_default">Par défaut</string>
    <string name="theme_pie">Camembert</string>
    <string name="notif_action_statistics">Statistiques</string>
    <string name="notif_action_network_operator_settings">Opérateur de réseau</string>
    <string name="notif_action_open_network_operator_settings">Paramètres des opérateurs</string>
    <string name="notif_monitoring_disabled">Le monitoring a été désactivé.</string>
    <string name="interval_since_boot">Démarrage du téléphone</string>
    <string name="interval_today">Aujourd\'hui</string>
    <string name="interval_one_week">Une semaine</string>
    <string name="interval_one_month">Un mois</string>
    <string name="unsupported_sim_error">Carte SIM non supportée</string>
    <string name="unsupported_sim_message">La carte SIM installée dans le téléphone n\'est pas compatible avec cette application.</string>
    <string name="quit_application">Fermer l\'application</string>
    <string name="network_free_mobile_3G">Free 3G</string>
    <string name="network_free_mobile_4G">Free 4G</string>
    <string name="network_orange_2G">Orange 2G</string>
    <string name="network_orange_3G">Orange 3G</string>

</resources>