<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_background_service" >
        <CheckBoxPreference
            android:enabled="true"
            android:key="pref_enable_at_boot"
            android:summary="@string/pref_enable_at_boot_summary"
            android:title="@string/pref_enable_at_boot" />
        <CheckBoxPreference android:title="@string/pref_upload_stats" android:key="pref_upload_stats" android:summary="@string/pref_upload_stats_summary" android:enabled="true"/><CheckBoxPreference
            android:key="pref_icon_in_gray"
            android:summary="@string/pref_icon_in_gray_summary"
            android:title="@string/pref_icon_in_gray" />

        <RingtonePreference
            android:key="pref_notif_sound"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:summary="@string/pref_notif_sound_summary"
            android:title="@string/pref_notif_sound" />

        <org.pixmob.freemobile.netstat.ui.IntListPreference
            android:dialogTitle="@string/pref_time_interval"
            android:key="pref_time_interval"
            android:title="@string/pref_time_interval" />
        
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about" >
        <Preference
            android:key="pref_version"
            android:title="@string/pref_version" />
        <Preference
            android:key="pref_license"
            android:title="@string/pref_license" android:summary="@string/pref_license_summary"/>
        <Preference
            android:key="pref_changelog"
            android:title="@string/pref_changelog" />
    </PreferenceCategory>

</PreferenceScreen>